objects/Subscription_Renewal_Audit_Log__c.object
<CustomObject>
    <description>What it does? Used to track history of Cloud Renewal Record Creation. Downstream Impact? None. Which Department is Owner? IT</description>
    <fields>
        <fullName>Date_of_resolution_of_issue__c</fullName>
        <description>What it does? Used to track date of resolution. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Date of resolution of issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_Resolution_implemented__c</fullName>
        <description>What it does?Used to track details of the resolution of fix for issue reported. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Details of Resolution implemented</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message_Returned_by_the_System__c</fullName>
        <description>What it does? Used to store Error Message in case of Renewal Process Failure. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Error Message Returned by the System</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_any_issue_is_it_resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does? Used to track whether issue has been resolved. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>If any issue,is it resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_resolved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does? User who resolved the issue. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Issue resolved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscription_Renewal_Audit_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does? Used to store the Cloud Renewal Opportunity Stored. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subscription Renewal Audit Logs</relationshipLabel>
        <relationshipName>Subscription_Renewal_Audit_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does?Used to link of the Renewal Quote created. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Subscription Renewal Audit Logs</relationshipLabel>
        <relationshipName>Subscription_Renewal_Audit_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does? Used to track who created the Cloud Renewal Records. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Record Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscription_Renewal_Audit_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Created_On__c</fullName>
        <description>What it does? Used to track when record was created. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Record Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Creation_Status__c</fullName>
        <description>What it does? Used to track if Cloud Renewal was successful or not. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Record Creation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_CCDB_Billing_Category__c</fullName>
        <description>What it does? Used to store Billing Category of the Source CCDB. Downstream Impact? None. Which Department is Owner? IT</description>
        <formula>TEXT(Subscription__r.Billing_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source CCDB Billing Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_CCDB_Offering_Type__c</fullName>
        <description>What it does? Used to track offering type of Source CCDB. Downstream Impact? None. Which Department is Owner? IT</description>
        <formula>TEXT(Subscription__r.Offering_Type__c)</formula>
        <label>Source CCDB Offering Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Subscription_Term_End_Date__c</fullName>
        <description>What it does? Used to store the Source Subscription term end date. Downstream Impact? None. Which Department is Owner? IT</description>
        <formula>Subscription__r.Subscription_End_Date__c</formula>
        <label>Source Subscription Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does? Used to store Subscription used as source for Renewal. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Source CCDB/Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscription Renewal Audit Logs</relationshipLabel>
        <relationshipName>Subscription_Renewal_Audit_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscription Renewal Audit Log</label>
    <nameField>
        <displayFormat>SRR-{00000}</displayFormat>
        <label>Subscription Renewal Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Renewal Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>